packages/dnb-eufemia/src/components/section/style/themes/dnb-section-theme-ui.scss
/*
 * Section theme
 *
 */

@import '../../../../style/elements/_anchor-mixins.scss';

@mixin SectionTheme() {
  &--divider {
    color: var(--color-black-80);
    &::after {
      color: var(--color-white);
      box-shadow: 99vw 0 0 0 currentColor, 198vw 0 0 0 currentColor,
        297vw 0 0 0 currentColor, 396vw 0 0 0 currentColor,
        0 0.0625rem 0 0 var(--color-mint-green-50),
        99vw 0.0625rem 0 0 var(--color-mint-green-50),
        0 -0.0625rem 0 0 var(--color-mint-green-50),
        99vw -0.0625rem 0 0 var(--color-mint-green-50),
        198vw 0.0625rem 0 0 var(--color-mint-green-50),
        198vw -0.0625rem 0 0 var(--color-mint-green-50);
    }
  }
  &--transparent {
    &::after {
      color: transparent;
    }
  }
  &--mint-green-12 {
    color: var(--color-black-80);
    &::after {
      color: var(--color-mint-green-12);
    }
  }
  &--white {
    color: var(--color-black-80);
    &::after {
      color: var(--color-white);
    }
  }
  &--mint-green {
    color: var(--color-black-80);
    &::after {
      color: var(--color-mint-green);
    }
  }
  &--lavender {
    color: var(--color-black-80);
    &::after {
      color: var(--color-lavender);
    }
  }
  &--sand-yellow {
    color: var(--color-black-80);
    &::after {
      color: var(--color-sand-yellow);
    }
  }
  &--pistachio {
    color: var(--color-black-80);
    &::after {
      color: var(--color-pistachio);
    }
  }
  &--black-3 {
    color: var(--color-black-80);
    &::after {
      color: var(--color-black-3);
    }
  }
  &--emerald-green {
    color: var(--color-mint-green);
    &::after {
      color: var(--color-emerald-green);
    }
  }
  &--sea-green {
    color: var(--color-white);
    &::after {
      color: var(--color-sea-green);
    }
  }
  &--fire-red {
    color: var(--color-white);
    &::after {
      color: var(--color-fire-red);
    }
  }
  &--fire-red-8 {
    color: var(--color-black-80);
    &::after {
      color: var(--color-fire-red-8);
    }
  }

  // Contrast styles
  &--fire-red .dnb-anchor,
  &--emerald-green .dnb-anchor,
  &--sea-green .dnb-anchor {
    color: var(--color-white);
    &:hover {
      color: var(--color-sea-green);
    }
    &:focus {
      color: var(--color-white);
      @include fakeFocus(null, var(--color-black-8));
    }
  }

  // Deprecated
  &--signal-orange {
    color: var(--color-ocean-green);
    &::after {
      color: var(--color-signal-orange);
    }
  }

  // contrast color
  &--signal-orange,
  &--fire-red,
  &--mint-green {
    ::selection {
      background-color: var(--color-white);
    }
  }
}

.dnb-section {
  @include SectionTheme();
}

